disconnected from shared data model