@@ -1,14 +1,13 @@
 package no.unit.nva.metadata.extractors;
 
-import no.unit.nva.model.EntityDescription;
-import nva.commons.core.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.net.URI;
 import java.util.Locale;
 import java.util.MissingResourceException;
 import java.util.function.Function;
+import no.unit.nva.doi.fetch.commons.publication.model.EntityDescription;
+import nva.commons.core.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public final class LanguageExtractor {
     private static final Logger logger = LoggerFactory.getLogger(LanguageExtractor.class);
@@ -35,7 +34,7 @@ public final class LanguageExtractor {
         String iso3LanguageCode = ISO3_LANGUAGE_CODE_UNDEFINED;
         if (!StringUtils.isEmpty(language)) {
             try {
-                iso3LanguageCode = new Locale(language).getISO3Language();
+                iso3LanguageCode = Locale.of(language).getISO3Language();
             } catch (MissingResourceException e) {
                 logger.warn("Could not map two-letter BCP-47 language code to three-letter ISO639-3 language code.", e);
             }
